# codetta

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  deny.toml  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: release.yml
crates/codetta-cli/: Cargo.toml
crates/codetta-cli/src/: main.rs
crates/codetta-cli/tests/: midi_export.rs  midi_import.rs  midi_roundtrip.rs  migrate.rs
crates/codetta-cli/tests/fixtures/: migrate-0.1-all-instruments.codetta  migrate-0.1-with-unknown.codetta  migrate-0.2-already.codetta
crates/codetta-core/: Cargo.toml
crates/codetta-core/src/: edit.rs  error.rs  io.rs  lib.rs  migrate.rs  model.rs  validate.rs
crates/codetta-core/src/effect/: mod.rs
crates/codetta-core/src/midi/: error.rs  export.rs  extensions.rs  import.rs  mod.rs
crates/codetta-core/src/render/: mod.rs
crates/codetta-core/src/synth/: manual.rs  mod.rs  soundfont.rs
docs/design/: 00-vision.md  01-architecture.md  02-project-format.md  03-cli.md  04-mcp.md  05-sound.md  06-examples.md  07-soundfont.md  08-midi.md  09-distribution.md
docs/examples/: cyber-arp.codetta  cyber-battle-full.codetta  cyber-lead.codetta  sub-bass.codetta  wide-pad.codetta
docs/examples/legacy-0.1/: cyber-battle-full.codetta  sub-bass.codetta
examples/: cyber-battle.codetta  smoke-sin.codetta
mcp-server/: README.md  package-lock.json  package.json  tsconfig.json
mcp-server/scripts/: smoke.mjs
mcp-server/src/: cli.ts  index.ts  resources.ts  tools.ts  workspace.ts
