[workspace]
resolver = "2"
members = [
    "crates/codetta-core",
    "crates/codetta-cli",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/krtw00/codetta"
authors = ["Codetta Contributors"]
rust-version = "1.75"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
