[package]
name = "codetta-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Codetta CLI: command-line frontend for codetta-core"

[[bin]]
name = "codetta"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
codetta-core = { path = "../codetta-core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
